// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test MyCloud should rendered correctly 1`] = `
<body>
  <div
    class="adm-px-tester"
    style="--size: 10;"
  />
  <div
    class="adm-px-tester"
  />
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-hash"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap ant-modal-centered"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-hash ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
          role="dialog"
          style="width: 720px;"
        >
          <div
            style="outline: none;"
            tabindex="0"
          >
            <div
              class="ant-modal-content"
            >
              <button
                aria-label="Close"
                class="ant-modal-close"
                type="button"
              >
                <span
                  class="ant-modal-close-x"
                >
                  <span
                    aria-label="close"
                    class="anticon anticon-close ant-modal-close-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="close"
                      fill="currentColor"
                      fill-rule="evenodd"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
              <div
                class="ant-modal-header"
              >
                <div
                  class="ant-modal-title"
                  id="test-id"
                >
                  <div
                    class="ant-space css-dev-only-do-not-override-hash ant-space-horizontal ant-space-align-center ant-space-gap-row-middle ant-space-gap-col-middle title-container"
                  >
                    <div
                      class="ant-space-item"
                    >
                      <div
                        class="title"
                      >
                        My Cloud
                      </div>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <div
                        class="limit"
                      >
                        <div
                          class="tag"
                        >
                          Free file
                           
                          2
                          /5
                        </div>
                        <button
                          class="ant-btn css-dev-only-do-not-override-hash ant-btn-link ant-btn-color-primary ant-btn-variant-link ant-btn-sm"
                          type="button"
                        >
                          <span>
                            Upgrade
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-modal-body"
              >
                <mock-head />
                <div
                  class="grids"
                >
                  <div>
                    Mock Grid File: 
                    {"created_at":"2024-01-09T04:14:36.801586Z","last_modified_at":"2024-01-09T06:42:04.824942Z","name":"File name","size":5788,"thumbnail_url":"https://s3/url","uuid":"mock-uuid-1111","workarea":"fhexa1"}
                  </div>
                  <div>
                    Mock Grid File: 
                    {"created_at":"2024-01-12T08:46:54.904853Z","last_modified_at":"2024-01-16T04:11:44.903500Z","name":"Another file","size":5678,"thumbnail_url":"https://s3/url2","uuid":"mock-uuid-2222","workarea":"ado1"}
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`test MyCloud should rendered correctly in mobile 1`] = `
<div>
  <div
    class="adm-floating-panel adm-floating-panel-bottom panel panel"
    data-animating="true"
    style="height: 0px; transform: translateY(calc(100% + (0px)));"
  >
    <div
      class="adm-floating-panel-mask"
      style="display: none;"
    />
    <div
      class="adm-floating-panel-header"
    >
      <div
        class="adm-floating-panel-bar"
      />
    </div>
    <div
      class="adm-floating-panel-content"
    >
      <span
        class="anticon close-icon"
        role="img"
        tabindex="-1"
      >
        <svgr-url
          aria-hidden="true"
          classname=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        />
      </span>
      <div
        class="title"
      >
        <div
          class="ant-space css-dev-only-do-not-override-hash ant-space-vertical ant-space-align-center ant-space-gap-row-middle ant-space-gap-col-middle title-container"
        >
          <div
            class="ant-space-item"
          >
            <div
              class="title"
            >
              My Cloud
            </div>
          </div>
          <div
            class="ant-space-item"
          >
            <div
              class="limit"
            >
              <div
                class="tag"
              >
                Free file
                 
                2
                /5
              </div>
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-link ant-btn-color-primary ant-btn-variant-link ant-btn-sm"
                type="button"
              >
                <span>
                  Upgrade
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <mock-head />
      <div
        class="scroll-content"
      >
        <div
          class="grids"
        >
          <div>
            Mock Grid File: 
            {"created_at":"2024-01-09T04:14:36.801586Z","last_modified_at":"2024-01-09T06:42:04.824942Z","name":"File name","size":5788,"thumbnail_url":"https://s3/url","uuid":"mock-uuid-1111","workarea":"fhexa1"}
          </div>
          <div>
            Mock Grid File: 
            {"created_at":"2024-01-12T08:46:54.904853Z","last_modified_at":"2024-01-16T04:11:44.903500Z","name":"Another file","size":5678,"thumbnail_url":"https://s3/url2","uuid":"mock-uuid-2222","workarea":"ado1"}
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test MyCloud should rendered correctly when user is subscribed 1`] = `
<body>
  <div
    class="adm-px-tester"
    style="--size: 10;"
  />
  <div
    class="adm-px-tester"
  />
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-hash"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap ant-modal-centered"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-hash ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
          role="dialog"
          style="width: 720px;"
        >
          <div
            style="outline: none;"
            tabindex="0"
          >
            <div
              class="ant-modal-content"
            >
              <button
                aria-label="Close"
                class="ant-modal-close"
                type="button"
              >
                <span
                  class="ant-modal-close-x"
                >
                  <span
                    aria-label="close"
                    class="anticon anticon-close ant-modal-close-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="close"
                      fill="currentColor"
                      fill-rule="evenodd"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
              <div
                class="ant-modal-header"
              >
                <div
                  class="ant-modal-title"
                  id="test-id"
                >
                  <div
                    class="ant-space css-dev-only-do-not-override-hash ant-space-horizontal ant-space-align-center ant-space-gap-row-middle ant-space-gap-col-middle title-container"
                  >
                    <div
                      class="ant-space-item"
                    >
                      <div
                        class="title"
                      >
                        <svgr-url />
                        My Cloud
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-modal-body"
              >
                <mock-head />
                <div
                  class="grids"
                >
                  <div>
                    Mock Grid File: 
                    {"created_at":"2024-01-09T04:14:36.801586Z","last_modified_at":"2024-01-09T06:42:04.824942Z","name":"File name","size":5788,"thumbnail_url":"https://s3/url","uuid":"mock-uuid-1111","workarea":"fhexa1"}
                  </div>
                  <div>
                    Mock Grid File: 
                    {"created_at":"2024-01-12T08:46:54.904853Z","last_modified_at":"2024-01-16T04:11:44.903500Z","name":"Another file","size":5678,"thumbnail_url":"https://s3/url2","uuid":"mock-uuid-2222","workarea":"ado1"}
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;
